{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1651,
  "lineage": "b876d018-4a8b-5d20-a2bb-e9a886a06a81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008469bd101175934",
            "arn": "arn:aws:ec2:us-east-1:435329769674:elastic-ip/eipalloc-008469bd101175934",
            "association_id": "eipassoc-008d0b31e3c13ba38",
            "domain": "vpc",
            "id": "eipalloc-008469bd101175934",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d82dd3582aa0fcba",
            "private_dns": "ip-10-0-1-88.ec2.internal",
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-52-73-40-254.compute-1.amazonaws.com",
            "public_ip": "52.73.40.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-gw-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-gw-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e99d422c1823179",
            "arn": "arn:aws:ec2:us-east-1:435329769674:elastic-ip/eipalloc-04e99d422c1823179",
            "association_id": "eipassoc-0b2321e038de5dff3",
            "domain": "vpc",
            "id": "eipalloc-04e99d422c1823179",
            "network_border_group": "us-east-1",
            "network_interface": "eni-094bd5bd574a92abb",
            "private_dns": "ip-10-0-2-99.ec2.internal",
            "private_ip": "10.0.2.99",
            "public_dns": "ec2-52-0-74-79.compute-1.amazonaws.com",
            "public_ip": "52.0.74.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-gw-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-gw-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:internet-gateway/igw-087f495ff70944453",
            "id": "igw-087f495ff70944453",
            "owner_id": "435329769674",
            "tags": {
              "Environment": "Production",
              "Name": "production-igw",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-igw",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008469bd101175934",
            "association_id": "eipassoc-008d0b31e3c13ba38",
            "connectivity_type": "public",
            "id": "nat-058becf1a2638283c",
            "network_interface_id": "eni-0d82dd3582aa0fcba",
            "private_ip": "10.0.1.88",
            "public_ip": "52.73.40.254",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0248b2079474efd00",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-gw-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-gw-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e99d422c1823179",
            "association_id": "eipassoc-0b2321e038de5dff3",
            "connectivity_type": "public",
            "id": "nat-015923286886b2ccb",
            "network_interface_id": "eni-094bd5bd574a92abb",
            "private_ip": "10.0.2.99",
            "public_ip": "52.0.74.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05956316d20c30c11",
            "tags": {
              "Environment": "Production",
              "Name": "production-nat-gw-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-nat-gw-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:route-table/rtb-02baec8115633870f",
            "id": "rtb-02baec8115633870f",
            "owner_id": "435329769674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-058becf1a2638283c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-route-private-subnet-0",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-route-private-subnet-0",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:route-table/rtb-04ef7fade05ad6d0b",
            "id": "rtb-04ef7fade05ad6d0b",
            "owner_id": "435329769674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015923286886b2ccb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-route-private-subnet-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-route-private-subnet-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:route-table/rtb-08fcfb25116459871",
            "id": "rtb-08fcfb25116459871",
            "owner_id": "435329769674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087f495ff70944453",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "production-route-public-subnets",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-route-public-subnets",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dce107382eaae086",
            "route_table_id": "rtb-02baec8115633870f",
            "subnet_id": "subnet-0d22d379feb76ef4b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aadd6f9b9819a5d0",
            "route_table_id": "rtb-04ef7fade05ad6d0b",
            "subnet_id": "subnet-0a145fd28dab95a09"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b371da1c250765c",
            "route_table_id": "rtb-08fcfb25116459871",
            "subnet_id": "subnet-0248b2079474efd00"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9bcb6a24212a6cb",
            "route_table_id": "rtb-08fcfb25116459871",
            "subnet_id": "subnet-05956316d20c30c11"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:security-group/sg-0d0161f08f37eeb8b",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0161f08f37eeb8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "production-bastion-sg",
            "name_prefix": "",
            "owner_id": "435329769674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "production-bastion-sg",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-bastion-sg",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:security-group/sg-094481263eeb15040",
            "description": "Allow inbound HTTP from the internet to ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094481263eeb15040",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-elb-sg",
            "name_prefix": "",
            "owner_id": "435329769674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production-elb-sg"
            },
            "tags_all": {
              "Name": "production-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:security-group/sg-045f62c442a5c5178",
            "description": "Allow traffic from ELB to NGINX",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045f62c442a5c5178",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094481263eeb15040"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-nginx-sg",
            "name_prefix": "",
            "owner_id": "435329769674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production-nginx-sg"
            },
            "tags_all": {
              "Name": "production-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:security-group/sg-092f03ed850b5ff87",
            "description": "Allow MySQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092f03ed850b5ff87",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Allow MySQL from app or bastion",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "production-rds-sg",
            "name_prefix": "",
            "owner_id": "435329769674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:subnet/subnet-0d22d379feb76ef4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d22d379feb76ef4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435329769674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-private-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:subnet/subnet-0a145fd28dab95a09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a145fd28dab95a09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "435329769674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-private-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-private-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:subnet/subnet-0248b2079474efd00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0248b2079474efd00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435329769674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-public-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-public-1",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:subnet/subnet-05956316d20c30c11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05956316d20c30c11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435329769674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "Name": "production-public-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-public-2",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435329769674:vpc/vpc-0dc00983d8eea9b6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a025be2b6f99505b",
            "default_route_table_id": "rtb-0979c3ee56bd65d2b",
            "default_security_group_id": "sg-01fae580ead73211e",
            "dhcp_options_id": "dopt-0755ab1550989d4e4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc00983d8eea9b6d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0979c3ee56bd65d2b",
            "owner_id": "435329769674",
            "tags": {
              "Environment": "Production",
              "Name": "production-vpc",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "production-vpc",
              "Owner": "Ernestine D Motouom",
              "Project": "refonte_class"
            }
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034568121cfdea9c3",
            "arn": "arn:aws:ec2:us-east-1:435329769674:instance/i-0472817aac7afc84e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "production-ec2-instance-profile",
            "id": "i-0472817aac7afc84e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virg.keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07929857e95fd20a4",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "public_ip": "54.89.4.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f48f25a1724801ce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0248b2079474efd00",
            "tags": {
              "Environment": "production",
              "Name": "production-bastion"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0161f08f37eeb8b"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.elb_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.bastion.data.aws_ami.ubuntu",
            "module.bastion.data.aws_ssm_parameter.ubuntu_ami",
            "module.iam_roles.aws_iam_instance_profile.cw_agent_instance_profile",
            "module.iam_roles.aws_iam_instance_profile.ec2_cloudwatch_metrics",
            "module.iam_roles.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam_roles.aws_iam_role.cloudtrail_logs_role",
            "module.iam_roles.aws_iam_role.cw_agent_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role.rds_monitoring_role",
            "module.iam_roles.aws_iam_role.waf_logging_role",
            "module.iam_roles.aws_iam_role_policy.cloudtrail_logs_policy",
            "module.iam_roles.aws_iam_role_policy.ec2_cloudwatch_metrics",
            "module.iam_roles.aws_iam_role_policy.waf_logging_policy",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_cw_agent",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm",
            "module.iam_roles.aws_iam_role_policy_attachment.rds_monitoring",
            "module.iam_roles.data.aws_iam_policy_document.cloudtrail_assume",
            "module.iam_roles.data.aws_iam_policy_document.cloudtrail_logs",
            "module.iam_roles.data.aws_iam_policy_document.cw_agent_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_cloudwatch_permissions",
            "module.iam_roles.data.aws_iam_policy_document.rds_assume",
            "module.iam_roles.data.aws_iam_policy_document.waf_assume",
            "module.iam_roles.data.aws_iam_policy_document.waf_logging",
            "module.iam_roles.random_id.cw_agent_suffix",
            "module.kms.aws_kms_key.rds",
            "module.kms.aws_kms_key.s3",
            "module.kms.aws_kms_key.secrets_manager",
            "module.kms.aws_kms_key_policy.rds_policy",
            "module.kms.aws_kms_key_policy.s3_policy",
            "module.kms.aws_kms_key_policy.secrets_manager_policy",
            "module.kms.data.aws_caller_identity.current",
            "module.rds_mysql.aws_db_instance.rds_instance",
            "module.rds_mysql.aws_db_subnet_group.rds_subnet_group",
            "module.secrets_manager.aws_secretsmanager_secret.db_secret",
            "module.secrets_manager.aws_secretsmanager_secret_version.db_secret_version",
            "module.secrets_manager.data.aws_secretsmanager_secret_version.retrieved",
            "module.secrets_manager.random_password.password"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_frontend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:435329769674:loadbalancer/app/production-nginx-alb/fdc43eb9cad6c0e3",
            "arn_suffix": "app/production-nginx-alb/fdc43eb9cad6c0e3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "production-nginx-alb-1133731885.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:435329769674:loadbalancer/app/production-nginx-alb/fdc43eb9cad6c0e3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-nginx-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-094481263eeb15040"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0248b2079474efd00"
              },
              {
                "subnet_id": "subnet-05956316d20c30c11"
              }
            ],
            "subnets": [
              "subnet-0248b2079474efd00",
              "subnet-05956316d20c30c11"
            ],
            "tags": {
              "Name": "production-nginx-alb"
            },
            "tags_all": {
              "Name": "production-nginx-alb"
            },
            "vpc_id": "vpc-0dc00983d8eea9b6d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.elb_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.iam_roles.aws_iam_role.rds_monitoring_role",
            "module.iam_roles.data.aws_iam_policy_document.rds_assume",
            "module.kms.aws_kms_key.rds",
            "module.kms.aws_kms_key.s3",
            "module.kms.aws_kms_key.secrets_manager",
            "module.kms.aws_kms_key_policy.rds_policy",
            "module.kms.aws_kms_key_policy.s3_policy",
            "module.kms.aws_kms_key_policy.secrets_manager_policy",
            "module.kms.data.aws_caller_identity.current",
            "module.rds_mysql.aws_db_instance.rds_instance",
            "module.rds_mysql.aws_db_subnet_group.rds_subnet_group",
            "module.secrets_manager.aws_secretsmanager_secret.db_secret",
            "module.secrets_manager.aws_secretsmanager_secret_version.db_secret_version",
            "module.secrets_manager.data.aws_secretsmanager_secret_version.retrieved",
            "module.secrets_manager.random_password.password"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_frontend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:435329769674:targetgroup/production-nginx-tg/4a80c5b7536bdd46",
            "arn_suffix": "targetgroup/production-nginx-tg/4a80c5b7536bdd46",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:435329769674:targetgroup/production-nginx-tg/4a80c5b7536bdd46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "production-nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc00983d8eea9b6d"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.elb_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.iam_roles.aws_iam_role.rds_monitoring_role",
            "module.iam_roles.data.aws_iam_policy_document.rds_assume",
            "module.kms.aws_kms_key.rds",
            "module.kms.aws_kms_key.s3",
            "module.kms.aws_kms_key.secrets_manager",
            "module.kms.aws_kms_key_policy.rds_policy",
            "module.kms.aws_kms_key_policy.s3_policy",
            "module.kms.aws_kms_key_policy.secrets_manager_policy",
            "module.kms.data.aws_caller_identity.current",
            "module.rds_mysql.aws_db_instance.rds_instance",
            "module.rds_mysql.aws_db_subnet_group.rds_subnet_group",
            "module.secrets_manager.aws_secretsmanager_secret.db_secret",
            "module.secrets_manager.aws_secretsmanager_secret_version.db_secret_version",
            "module.secrets_manager.data.aws_secretsmanager_secret_version.retrieved",
            "module.secrets_manager.random_password.password"
          ]
        }
      ]
    }
  ]
}